unpackaged/main/default/objects/litify_fin__lit_Transaction_Field_Mapping__c/litify_fin__lit_Transaction_Field_Mapping__c.object-meta.xml
<CustomObject>
    <description>Used to define which fields on a given object map to which fields on transaction. To be used during transaction creation to pre-populate transaction values.</description>
    <label>Transaction Field Mapping</label>
    <nameField>
        <label>Transaction Field Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>