unpackaged/main/default/objects/litify_fin__lit_Transaction_Field_Mapping__c/fields/litify_fin__lit_Item_Template__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Item_Template__c</fullName>
    <description>The item that the transaction is created from.</description>
    <label>Item Template</label>
    <referenceTo>litify_fin__lit_Item_Template__c</referenceTo>
    <relationshipLabel>Transaction Field Mappings</relationshipLabel>
    <relationshipName>Transaction_Field_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>