unpackaged/main/default/objects/litify_fin__lit_Transaction_Field_Mapping__c/fields/litify_fin__lit_Transaction_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Transaction_Field_Name__c</fullName>
    <description>The API name of the transaction field that will be pre-populated by the value from the item.</description>
    <label>Transaction Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>